crates/lang/tests/ui/storage_item/fail/collections_only_packed_2.stderr
error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:11:8
   |
11 |     a: BTreeMap<u128, NonPacked>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Decode` is not implemented for `BTreeMap<u128, NonPacked>`
   |
   = help: the trait `Decode` is implemented for `BTreeMap<K, V>`
   = note: required because of the requirements on the impl of `Packed` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `Item<()>` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `AutoItem<ManualKey<2085512762_u32>>` for `BTreeMap<u128, NonPacked>`

error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:11:8
   |
11 |     a: BTreeMap<u128, NonPacked>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `BTreeMap<u128, NonPacked>`
   |
   = help: the trait `Encode` is implemented for `BTreeMap<K, V>`
   = note: required because of the requirements on the impl of `Packed` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `Item<()>` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `AutoItem<ManualKey<2085512762_u32>>` for `BTreeMap<u128, NonPacked>`

error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:9:1
   |
9  | #[ink_lang::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Decode` is not implemented for `BTreeMap<u128, NonPacked>`
   |
   = help: the trait `Decode` is implemented for `BTreeMap<K, V>`
   = note: required because of the requirements on the impl of `Packed` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `Item<()>` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `AutoItem<ManualKey<2085512762_u32>>` for `BTreeMap<u128, NonPacked>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/primitives/src/traits.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`
   = note: this error originates in the derive macro `::ink_primitives::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:9:1
   |
9  | #[ink_lang::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `BTreeMap<u128, NonPacked>`
   |
   = help: the trait `Encode` is implemented for `BTreeMap<K, V>`
   = note: required because of the requirements on the impl of `Packed` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `Item<()>` for `BTreeMap<u128, NonPacked>`
   = note: required because of the requirements on the impl of `AutoItem<ManualKey<2085512762_u32>>` for `BTreeMap<u128, NonPacked>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/primitives/src/traits.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`
   = note: this error originates in the derive macro `::ink_primitives::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Decode` is not satisfied
   --> tests/ui/storage_item/fail/collections_only_packed_2.rs:9:1
    |
9   | #[ink_lang::storage_item]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Decode` is not implemented for `BTreeMap<u128, NonPacked>`
    |
    = help: the trait `Decode` is implemented for `BTreeMap<K, V>`
    = note: required because of the requirements on the impl of `Packed` for `BTreeMap<u128, NonPacked>`
    = note: required because of the requirements on the impl of `Item<()>` for `BTreeMap<u128, NonPacked>`
    = note: required because of the requirements on the impl of `AutoItem<ManualKey<2085512762_u32>>` for `BTreeMap<u128, NonPacked>`
note: required because it appears within the type `Contract`
   --> tests/ui/storage_item/fail/collections_only_packed_2.rs:10:8
    |
10  | struct Contract {
    |        ^^^^^^^^
note: required by a bound in `Result`
   --> $RUST/core/src/result.rs
    |
    | pub enum Result<T, E> {
    |                 ^ required by this bound in `Result`
    = note: this error originates in the derive macro `::ink_primitives::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Encode` is not satisfied
   --> tests/ui/storage_item/fail/collections_only_packed_2.rs:9:1
    |
9   | #[ink_lang::storage_item]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `BTreeMap<u128, NonPacked>`
    |
    = help: the trait `Encode` is implemented for `BTreeMap<K, V>`
    = note: required because of the requirements on the impl of `Packed` for `BTreeMap<u128, NonPacked>`
    = note: required because of the requirements on the impl of `Item<()>` for `BTreeMap<u128, NonPacked>`
    = note: required because of the requirements on the impl of `AutoItem<ManualKey<2085512762_u32>>` for `BTreeMap<u128, NonPacked>`
note: required because it appears within the type `Contract`
   --> tests/ui/storage_item/fail/collections_only_packed_2.rs:10:8
    |
10  | struct Contract {
    |        ^^^^^^^^
note: required by a bound in `Result`
   --> $RUST/core/src/result.rs
    |
    | pub enum Result<T, E> {
    |                 ^ required by this bound in `Result`
    = note: this error originates in the derive macro `::ink_primitives::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)
